# awesome-Elas-demo

./: CMakeLists.txt  README.md  run_main.sh
include/: triangle.h
src/: main.cpp  triangle.cpp
